# swaptun

./: .gitignore  .gitmodules  CLAUDE.md  FASTLANE_SETUP.md  README.md  anr_2025-05-01-08-56-49-525  index.html  keystore.jks  logs.txt  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: android-closed-testing.yml  android-production.yml  ios-production.yml  ios-testflight.yml
android/: Appfile  Fastfile
ios/: Appfile  Fastfile
src/: App copy.vue  App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  deezer.rs  error.rs  lib.rs  main.rs  models.rs  spotify.rs
src-tauri/src/backend/: apple.rs  auth.rs  backend.rs  deezer.rs  mod.rs  notification.rs  playlist.rs  spotify.rs  user.rs  youtube.rs
src-tauri/src/commands/: app.rs  apple.rs  auth.rs  deezer.rs  mod.rs  notifications.rs  playlists.rs  spotify.rs  youtube.rs
src-tauri/src/utils/: response.rs
src-tauri/src/validators/: user_validators.rs
src/assets/css/: global.css
src/components/: GreetForm.vue  GreetingCard.vue  HapticButton.vue  LoadingAppAnimation.vue  PlaylistCard.vue  PlaylistList.vue  footer.vue  header.vue
src/components/common/: AppHeader.vue  BottomSheetModal.vue  Button.vue  Card.vue  ConfirmDialog.vue  ErrorNotification.vue  ImportSuccessDialog.vue  LoadingOverlay.vue  LoadingSpinner.vue  OfflineIndicator.vue  SearchInput.vue  SearchInputBackend.vue  SkeletonLoader.vue  Toast.vue  ToastContainer.vue
src/components/nav/: BottomNav.vue
src/components/playlists/: PlaylistCard.vue  PlaylistGrid.vue  PlaylistSection.vue  SendPlaylistModal.vue  SharePlaylistModal.vue
src/components/skeletons/: PlaylistCardSkeleton.vue  PlaylistSectionSkeleton.vue  UserCardSkeleton.vue
src/components/tour/: AppTour.vue  TourStep.vue
src/components/users/: FriendsList.vue  UserCard.vue  UserSearch.vue
src/composables/: useBackgroundSync.ts  useFuzzySearch.ts  useHaptics.ts  useNotifications.ts  useOfflineCache.ts  usePlatformConnect.ts  usePlaylistManagement.ts  usePlaylistMusics.ts  useRetry.ts  useSendPlaylist.ts  useToast.ts  useTour.ts
src/config/: tourSteps.ts
src/layouts/: MainLayout.vue  default.vue
src/models/: dto.ts  music.ts  playlist.ts  user.ts
src/pages/: App.vue  ForgotPasswordPage.vue  FriendsTab.vue  HomePage.vue  HomeTab.vue  LoginPage.vue  ProfilePage.vue  ProfileTab.vue  RegisterPage.vue  ResetPasswordPage.vue  SharedPlaylistsPage.vue  SpotifyAuthPage.vue  authentification.vue  connectionForm.vue  index.vue  register.vue
src/store/: app.ts  sharedPlaylists.ts  token.ts  user.ts
src/utils/: constants.ts  helpers.ts
tauri-plugin-admob/: Cargo.toml  README.md  package.json
tauri-plugin-admob/android/: build.gradle.kts
tauri-plugin-admob/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-admob/android/src/main/java/: Example.kt  ExamplePlugin.kt
tauri-plugin-admob/examples/tauri-app/: package.json
tauri-plugin-admob/examples/tauri-app/src/: App.svelte
tauri-plugin-admob/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-admob/ios/: Package.swift  README.md
tauri-plugin-admob/ios/Sources/: ExamplePlugin.swift
tauri-plugin-admob/permissions/autogenerated/: reference.md
tauri-plugin-admob/src/: desktop.rs  lib.rs  mobile.rs
(+3 files in other folders)
