[package]
name = "swaptun"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swaptun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]

swaptun_backend = { git = "ssh://git@github.com/saurL/swaptun_backend.git", branch = "main" }
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log="0.4.27"
#tauri-plugin-admob = "0.0.4"
tauri-plugin-http =  { version = "2", features = ["json", "rustls-tls", "blocking"] }
dotenv = "0.15"
tauri-plugin-pinia = "3.3.0"
#rspotify = {    version = "0.14.0",    default-features = false,    features = ["client-reqwest", "reqwest-rustls-tls", "cli"] }
rustls = "0.20"
webpki-roots = "0.22"
