[package]
name = "swaptun"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swaptun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3", features = [] }
[dependencies]
tauri-plugin = "2.4.0"

swaptun-backend = { git = "ssh://git@github.com/saurL/swaptun_backend.git", branch = "main", default-features= false }
tauri = { git ="https://github.com/saurL/tauri",branch="feat/push-notifications", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log="0.4.27"
#tauri-plugin-admob = "0.0.4"
tauri-plugin-http =  { version = "2", features = ["json", "rustls-tls", "blocking"] }
dotenv = "0.15"
tauri-plugin-pinia = "1.0"
tauri-plugin-push-notifications = { git = "https://github.com/saurL/tauri-plugin-push-notifications", features = ["ios-fcm"] }
rspotify = { version = "0.14.0",    default-features = false,    features = ["client-reqwest", "reqwest-rustls-tls", "cli"] }
tauri-plugin-deep-link = "2"
tauri-plugin-custom-tabs-manager = { git = "https://github.com/saurL/tauri-plugin-custom-tabs-manager"}
tauri-plugin-safe-area-insets-css = { git ="https://github.com/saurL/tauri-plugin-safe-area-insets-css" }

tauri-plugin-musickit = { git = "https://github.com/saurL/tauri-plugin-musickit"}
tokio = "1.47.1"
tauri-plugin-haptics = "2.3.0"
open = "5.0"
[target.'cfg(target_os = "ios")'.dependencies]
tauri-plugin-fullscreen = { git = "https://github.com/saurL/tauri-plugin-fullscreen" }



[patch.crates-io]
tauri = { git = "https://github.com/saurL/tauri", branch = "feat/push-notifications" }
tauri-utils = { git = "https://github.com/saurL/tauri", branch = "feat/push-notifications" }
